# tablecopy

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: converter.rs  format.rs  hud.rs  image.rs  main.rs  parser.rs
